# TinyAgent

./: .env.example  AGENT.md  pyproject.toml
examples/: test_model.py  test_model_switch.py  test_params.py  test_rag.py  test_tools.py
tiny_agent/: __init__.py  config.py
tiny_agent/core/: __init__.py  base.py
tiny_agent/models/: __init__.py  openai.py
tiny_agent/rag/: __init__.py  document.py  embeddings.py  loaders.py  retriever.py  splitters.py  stores.py
tiny_agent/tools/: __init__.py  base.py  registry.py
