[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-agent"
version = "0.1.0"
description = "轻量化 Agent 系统，参考 LangChain/LangGraph 设计"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
